--- a/index.html
+++ b/index.html
@@ -2,6 +2,25 @@
   <html>
 
     <head>
+          <meta charset="utf-8">
+          <meta http-equiv="X-UA-Compatible" content="IE=edge">
+          <meta name="viewport" content="width=device-width, initial-scale=1">
+          <meta name="Author" content="Bryan Guner">
+          <meta http-equiv="X-UA-Compatible" content="IE=edge">
+          <!-- Mobile Meta -->
+          <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+          <!-- Site Meta -->
+          <meta name="description" content="Resource-sharing-hub">
+          <meta name="author" content="Bryan Guner">
+          <!-- Site Icons -->
+          <!-- Basic -->
+          <meta charset="utf-8">
+          <meta http-equiv="X-UA-Compatible" content="IE=edge">
+          <!-- Mobile Meta -->
+          <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+          <!-- Favicon -->
+          <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
+          <link rel="apple-touch-icon" href="./apple-touch-icon.png">
       <meta http-equiv="Content-Type" content="text/html">
       <meta name="Author" content="Bryan Guner">
       <link rel="stylesheet" href="./assets/prism.css">
