--- a/promises-async.html
+++ b/promises-async.html
@@ -2,27 +2,25 @@
 <html lang="en">
 
   <head>
-              <meta charset="utf-8">
-              <meta http-equiv="X-UA-Compatible" content="IE=edge">
-              <meta name="viewport" content="width=device-width, initial-scale=1">
-              <meta name="Author" content="Bryan Guner">
-              <meta http-equiv="X-UA-Compatible" content="IE=edge">
-              <!-- Mobile Meta -->
-              <meta name="viewport"
-                content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-              <!-- Site Meta -->
-              <meta name="description" content="Resource-sharing-hub">
-              <meta name="author" content="Bryan Guner">
-              <!-- Site Icons -->
-              <!-- Basic -->
-              <meta charset="utf-8">
-              <meta http-equiv="X-UA-Compatible" content="IE=edge">
-              <!-- Mobile Meta -->
-              <meta name="viewport"
-                content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-              <!-- Favicon -->
-              <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
-              <link rel="apple-touch-icon" href="./apple-touch-icon.png">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="Author" content="Bryan Guner">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!-- Mobile Meta -->
+    <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <!-- Site Meta -->
+    <meta name="description" content="Resource-sharing-hub">
+    <meta name="author" content="Bryan Guner">
+    <!-- Site Icons -->
+    <!-- Basic -->
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!-- Mobile Meta -->
+    <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
+    <link rel="apple-touch-icon" href="./apple-touch-icon.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width" , initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
     <title>Interview-Prep</title>
@@ -441,7 +439,7 @@
           <div class="answer">
             <p>#1 EXPLANATION
               The <code>before</code> Mocha hook with be invoked once before all tests within the same block are run.
-              </p>
+            </p>
           </div>
         </div>
         <div class="question" id="question-26">
